--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Labb 2 - Grupp 22</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link rel="shortcut icon" href="#" />
 </head>
 <body>
@@ -13,6 +14,6 @@
 </header>
 
 
-    <script src="script.js"></script>
+    <script src="client/script.js"></script>
 </body>
 </html>
